test/Inputs/header_5.llzk
// Imported via `include_fail.llzk`

module attributes {veridise.lang = "llzk"} {
  // expected-error@+1 {{'include.from' op expected 'builtin.module' from included file to have "veridise.lang" attribute}}
  include.from "Inputs/header_3.llzk" as @std

  function.def @test_func() {
    function.call @std::@pkg_two::@my_func_2() : () -> ()
    function.return
  }
}
